[package]
name = "tlog_checkpoint"
readme = "README.md"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "An implementation of c2sp.org/tlog-checkpoint"
categories = ["cryptography"]
keywords = ["transparency", "checkpoint", "merkle", "crypto", "pki"]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["rlib"]

[dependencies]
base64.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
sha2.workspace = true
signed_note.workspace = true
thiserror.workspace = true
tlog_core.workspace = true
