[package]
name = "tlog_core"
readme = "README.md"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "RFC 6962 Merkle tree math + draft-ietf-plants-merkle-tree-certs subtree proofs"
categories = ["cryptography"]
keywords = ["transparency", "merkle", "rfc6962", "crypto", "pki"]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["rlib"]

[dependencies]
base64.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
