[package]
name = "tlog_cosignature"
readme = "README.md"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "An implementation of c2sp.org/tlog-cosignature"
categories = ["cryptography"]
keywords = ["transparency", "cosignature", "checkpoint", "crypto", "pki"]

[lib]
crate-type = ["rlib"]

[dependencies]
byteorder.workspace = true
ed25519-dalek.workspace = true
length_prefixed.workspace = true
ml-dsa.workspace = true
signed_note.workspace = true
tlog_core.workspace = true
tlog_checkpoint.workspace = true

[dev-dependencies]
rand.workspace = true
