[package]
name = "tlog_entry"
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Worker-side log-entry abstractions for transparency logs"

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["rlib"]

[dependencies]
length_prefixed.workspace = true
serde.workspace = true
sha2.workspace = true
tlog_checkpoint.workspace = true
tlog_core.workspace = true
tlog_tiles.workspace = true
