[package]
name = "tlog_subtree_signature"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Wire-format parsers, serializers, and the mtc-subtree/v1 binary signing format for the sign-subtree cosigner endpoint"
categories = ["cryptography"]
keywords = ["transparency", "subtree", "cosignature", "checkpoint"]

[lib]
crate-type = ["rlib"]

[dependencies]
base64.workspace = true
byteorder.workspace = true
length_prefixed.workspace = true
signature.workspace = true
signed_note.workspace = true
thiserror.workspace = true
tlog_tiles.workspace = true
