[package]
name = "tlog_tiles_wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "wasm-bindgen wrapper for the tlog_tiles crate (c2sp.org/tlog-tiles, c2sp.org/tlog-checkpoint)"
publish = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.cargo-machete]
# getrandom is not called directly but must be present so its wasm_js feature
# activates the correct WASM backend for all transitive dependents.
ignored = ["getrandom"]

[lib]
crate-type = ["cdylib"]

[dependencies]
tlog_core = { workspace = true }
tlog_tiles = { workspace = true }
wasm-bindgen = { workspace = true }
console_error_panic_hook = { workspace = true }
getrandom = { workspace = true }
