[package]
name = "witness_worker"
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "A transparency-log witness (c2sp.org/tlog-witness) on Cloudflare Workers"
categories = ["cryptography"]
keywords = ["transparency", "witness", "crypto", "pki"]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1351
[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info = true

[lib]
crate-type = ["cdylib"]

[build-dependencies]
config = { path = "./config", package = "witness_worker_config" }
jsonschema.workspace = true
serde_json.workspace = true

[dependencies]
config = { path = "./config", package = "witness_worker_config" }
console_error_panic_hook.workspace = true
console_log.workspace = true
ed25519-dalek.workspace = true
generic_log_worker.workspace = true
getrandom.workspace = true
hex.workspace = true
log.workspace = true
pkcs8.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
signed_note.workspace = true
tlog_core.workspace = true
tlog_cosignature.workspace = true
tlog_tiles.workspace = true
tlog_witness.workspace = true
worker.workspace = true

[dev-dependencies]
base64.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(wasm_bindgen_unstable_test_coverage)',
] }

[package.metadata.cargo-machete]
ignored = ["getrandom"]
