[package]
name = "x509_util"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
der.workspace = true
sha2.workspace = true
x509-cert.workspace = true
