[package]
name = "x509_util"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
const-oid.workspace = true
der.workspace = true
digest.workspace = true
p256.workspace = true
p384.workspace = true
p521.workspace = true
rsa.workspace = true
sha1.workspace = true
sha2.workspace = true
signature.workspace = true
spki.workspace = true
thiserror.workspace = true
x509-cert.workspace = true

[dev-dependencies]
chrono.workspace = true
