[package]
name = "ietf_mtc_worker_config"
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Configuration for ietf_mtc_worker"

[dependencies]
serde.workspace = true