[package]
name = "mirror_worker_config"
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Configuration for mirror_worker"

[dependencies]
ml-dsa.workspace = true
serde.workspace = true
serde_with.workspace = true
signed_note.workspace = true
tlog_cosignature.workspace = true

[dev-dependencies]
serde_json.workspace = true
