[package]
name = "mtc_worker_config"
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Configuration for mtc_worker"

[dependencies]
chrono.workspace = true
serde.workspace = true