[package]
name = "mtca_worker_config"
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Configuration for mtca_worker"

[dependencies]
serde.workspace = true